10_ingress/grade-submission-portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grade-submission-portal
  namespace: grade-submission
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: grade-submission-portal
  # The corresponding Pod must have a matching label in its metadata.labels:
  # metadata:
  #   labels:
  #     app.kubernetes.io/instance: grade-submission-portal  # must match
  # If the labels don't match, the Service has no endpoints and traffic goes nowhere.
  ports:
    # The port the Service exposes internally within the cluster. Other Pods (also Ingress Service) call this Service at <service-name>:5001.
    - port: 5001

      # The port the container/Pod is actually listening on.
      # This is where the Service forwards traffic to.
      targetPort: 5001
